--- a/config/starship.toml
+++ b/config/starship.toml
@@ -1,15 +1,15 @@
 format = """
-[ ](#17153B)\
+[ ](#2A004E)\
 $os\
 $username\
-[ ](bg:#17153B fg:#2E236C)\
+[ ](bg:#2A004E fg:#500073)\
 $directory\
-[ ](fg:#433D8B bg:#2E236C)\
+[ ](fg:#c62300 bg:#500073)\
 $git_branch\
 $git_status\
-[ ](fg:#C8ACD6 bg:#433D8B)\
+[ ](fg:#f14a00 bg:#c62300)\
 $time\
-[](fg:#C8ACD6)\
+[](fg:#f14a00)\
 """
 
 # Disable the blank line at the start of the prompt
@@ -19,19 +19,19 @@ $time\
 # and use the os module below
 [username]
 show_always = true
-style_user = "bg:#17153B"
-style_root = "bg:#17153B"
+style_user = "bg:#2A004E"
+style_root = "bg:#2A004E"
 format = '[  ]($style)'
 disabled = false
 
 # An alternative to the username module which displays a symbol that
 # represents the current operating system
 [os]
-style = "bg:#17153B"
+style = "bg:#2A004E"
 disabled = true # Disabled by default
 
 [directory]
-style = "bg:#2E236C"
+style = "bg:#500073"
 format = "[ $path ]($style)"
 truncation_length = 2
 truncation_symbol = "…/"
@@ -71,11 +71,11 @@ format = '[ $symbol ($version) ]($style)'
 
 [git_branch]
 symbol = ""
-style = "bg:#433D8B"
+style = "bg:#c62300"
 format = '[ $symbol $branch ]($style)'
 
 [git_status]
-style = "bg:#433D8B"
+style = "bg:#c62300"
 format = '[$all_status$ahead_behind ]($style)'
 
 [golang]
@@ -125,6 +125,6 @@ format = '[ $symbol ($version) ]($style)'
 [time]
 disabled = false
 time_format = "%R" # Hour:Minute Format
-style = "bg:#C8ACD6 fg:#17153B"
+style = "bg:#f14a00"
 
 format = '[ $time ]($style)'
