--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -95,19 +95,20 @@ mouse_hide_wait -1
 #map ctrl+shift+left previous_tab
 #map ctrl+shift+q close_tab
 
-color0 #000000
-color8 #545454
-color1 #ff0000
-color9 #f40d17
-color2 #37dd21
-color10 #3bcf1d
-color3 #fee409
-color11 #ecc809
-color4 #1460d2
-color12 #5555ff
-color5 #ff005d
-color13 #ff55ff
-color6 #00bbbb
-color14 #6ae3f9
-color7 #bbbbbb
-color15 #ffffff
+
+color0                #2b283d
+color8                #413e53
+color1                #ae0000
+color9                #d3a624
+color2                #3e7c54
+color10               #aaaaaa
+color3                #f0c75e
+color11               #716254
+color4                #415baf
+color12               #946a2c
+color5                #9445ae
+color13               #b294ba
+color6                #008aff
+color14               #25de50
+color7                #850000
+color15               #c9c9c9
