--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -17,7 +17,7 @@
 #include VSCode_Dark.conf
 
 # terminal opacity and blur
-background_image ~/hermit_purple/wallpaper_kitty.jpg
+background_image /home/dukantic/Hermit_Purple/wallpaper_kitty.jpg
 background_image_layout cscaled
 
 # advance 
@@ -31,7 +31,7 @@ enable_audio_bell no
 #linux_display_server x11
 
 # font
-font_family        IosevkaTerm NF
+font_family        Iosevka NF
 bold_font          auto
 italic_font        auto
 bold_italic_font   auto
