change config for color in nvim

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -21,7 +21,7 @@ background_image /home/dukantic/Hermit_Purple/wallpaper_kitty.jpg
 background_image_layout cscaled
 
 # advance 
-#term xterm-kitty
+term xterm-kitty
 
 # terminal bell
 enable_audio_bell no
@@ -35,7 +35,7 @@ font_family        Iosevka NF
 bold_font          auto
 italic_font        auto
 bold_italic_font   auto
-font_size 16.0
+font_size 14.0
 
 dpi 120.0  
 
