big change color to green and screen shot and other

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -17,8 +17,10 @@
 #include VSCode_Dark.conf
 
 # terminal opacity and blur
-background_image /home/dukantic/Hermit_Purple/wallpaper_kitty.jpg
-background_image_layout cscaled
+#background_image /home/dukantic/Hermit_Purple/wallpaper_kitty.jpg
+#background_image_layout cscaled
+background_opacity 0.7
+
 
 # advance 
 term xterm-kitty
@@ -104,8 +106,8 @@ color2 #37dd21
 color10 #3bcf1d
 color3 #fee409
 color11 #ecc809
-color4 #1460d2
-color12 #5555ff
+color4 #558B2F
+color12 #558B2F
 color5 #ff005d
 color13 #ff55ff
 color6 #00bbbb
