--- a/config/starship.toml
+++ b/config/starship.toml
@@ -1,15 +1,15 @@
 format = """
-[](#2A004E)\
+[](#000000)\
 $os\
 $username\
-[](bg:#2A004E fg:#500073)\
+[](bg:#000000 fg:#09200B)\
 $directory\
-[](fg:#c62300 bg:#500073)\
+[](fg:#123F16 bg:#09200B)\
 $git_branch\
 $git_status\
-[](fg:#f14a00 bg:#c62300)\
+[](fg:#123F16 bg:#123F16)\
 $time\
-[](fg:#f14a00)\
+[](fg:#123F16)\
 """
 
 # Disable the blank line at the start of the prompt
@@ -19,19 +19,19 @@ $time\
 # and use the os module below
 [username]
 show_always = true
-style_user = "bg:#2A004E"
-style_root = "bg:#2A004E"
+style_user = "bg:#000000"
+style_root = "bg:#000000"
 format = '[   ]($style)'
 disabled = false
 
 # An alternative to the username module which displays a symbol that
 # represents the current operating system
 [os]
-style = "bg:#2A004E"
+style = "bg:#000000"
 disabled = true # Disabled by default
 
 [directory]
-style = "bg:#500073"
+style = "bg:#09200B"
 format = "[ $path ]($style)"
 truncation_length = 2
 truncation_symbol = "…/"
@@ -71,11 +71,11 @@ format = '[ $symbol ($version) ]($style)'
 
 [git_branch]
 symbol = ""
-style = "bg:#c62300"
+style = "bg:#123F16"
 format = '[ $symbol $branch ]($style)'
 
 [git_status]
-style = "bg:#c62300"
+style = "bg:#123F16"
 format = '[$all_status$ahead_behind ]($style)'
 
 [golang]
@@ -125,6 +125,6 @@ format = '[ $symbol ($version) ]($style)'
 [time]
 disabled = false
 time_format = "%R" # Hour:Minute Format
-style = "bg:#f14a00"
+style = "bg:#123F16"
 
 format = '[ $time ]($style)'
